Fix container collapse (.results)

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -177,7 +177,7 @@ html {
     .results{
         margin-top: 2rem;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 2fr;
         align-items: center;
     }
     .results span, .results p{
